failed attempt to rotate the camera

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,3 +5,5 @@
 @import "components/banner";
 @import "components/app";
 @import "components/three-canvas";
+@import "components/button";
+@import "components/helper";
